syntax = "proto3";

package response;

option go_package = "gitlab.com/pesdata/cluster/backend/bc-adapter/common/interfaces/messages/response";

option java_multiple_files = true;
option java_package = "network.clusterone.grpc.messages.response";

enum StatusCode {
    OK = 0;
    BadRequest = 1;
    NotFound = 2;
    InternalServerError = 3;
}

message Status {
    StatusCode Code = 1;
    string Error = 2;
}
